--- a/action.yml
+++ b/action.yml
@@ -12,7 +12,7 @@ runs:
       shell: 'bash'
       run: |
         echo "VCPKG_BINARY_SOURCES=clear;nuget,GitHub,readwrite" >> $GITHUB_ENV
-        echo "VCPKG_NUGET_REPOSITORY=https://github.com/lerppana/vcpkg-registry.git" >> $GITHUB_ENV
+        echo "VCPKG_NUGET_REPOSITORY=https://github.com/helynranta/vcpkg-registry.git" >> $GITHUB_ENV
         echo "VCPKG_KEEP_ENV_VARS=GITHUB_AUTHORIZATION_TOKEN;BLENDER_ROOT" >> $GITHUB_ENV
         echo "VCPKG_FEATURE_FLAGS=manifests,versions,registries" >> $GITHUB_ENV
 
@@ -37,11 +37,11 @@ runs:
     - uses: lukka/get-cmake@latest
       name: get latest cmake version
 
-    - uses: lerppana/git-credential-approve@v1
+    - uses: helynranta/git-credential-approve@v1
       name: setup credentials for private vcpkg registry
       with:
         personal-access-token: ${{ inputs.PAT }}
-        path: 'lerppana/vcpkg-registry'
+        path: 'helynranta/vcpkg-registry'
 
     - name: bootstrap vcpkg
       shell: pwsh
@@ -53,14 +53,14 @@ runs:
       run: >
         ${{ matrix.mono }} `./vcpkg/vcpkg fetch nuget | tail -n 1`
         sources add
-        -source "https://nuget.pkg.github.com/lerppana/index.json"
+        -source "https://nuget.pkg.github.com/helynranta/index.json"
         -storepasswordincleartext
         -name "GitHub"
-        -username "lerppana"
+        -username "helynranta"
         -password "${{ inputs.PAT }}"
 
     - name: 'setup nuget apikey'
       shell: 'bash'
       run: >
         `./vcpkg/vcpkg fetch nuget | tail -n 1`
-        setapikey "${{ inputs.PAT }}" -Source "https://nuget.pkg.github.com/lerppana/index.json"
+        setapikey "${{ inputs.PAT }}" -Source "https://nuget.pkg.github.com/helynranta/index.json"
